[package]
authors = ["David Laban <alsuren@gmail.com>", "Alex Regueiro <alexreg@gmail.com>"]
categories = ["games"]
description = "Facebook Messenger bot for the Ergo game"
homepage = "https://github.com/alexreg/ergo-bot"
keywords = ["bot", "facebook", "facebook-messenger", "game"]
license = "BSD-3-Clause"
name = "ergo-bot"
readme = "README"
repository = "https://github.com/alexreg/ergo-bot"
version = "0.1.0"

[[bin]]
name = "hello"
path = "src/hello.rs"

[features]
unstable = []

[dependencies]
gotham = "0.2"
gotham_derive = "0.2"

futures = "0.1.18"
hyper = "0.11.19"
hyper-tls = "0.1.2"
mime = "*"
pretty_env_logger = "0.2.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
tokio-core = "0.1.12"
url = "1.7.0"
