[package]
edition = "2018"
authors = ["David Laban <alsuren@gmail.com>", "Alex Regueiro <alexreg@gmail.com>"]
categories = ["games"]
description = "Facebook Messenger bot for the Ergo game"
homepage = "https://github.com/alexreg/ergo-bot"
keywords = ["bot", "facebook", "facebook-messenger", "game"]
license = "BSD-3-Clause"
name = "ergo-bot"
readme = "README"
repository = "https://github.com/alexreg/ergo-bot"
version = "0.1.0"

[[bin]]
name = "hello"
path = "src/hello.rs"

[features]
unstable = []

[dependencies]
gotham = "0.3"
gotham_derive = "0.3"
futures = "0.1"
hyper = "0.12.11"
hyper-tls = "0.3.0"
mime = "*"
pretty_env_logger = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
tokio = { version = "0.1.0", features = ["async-await-preview"] }
url = "1.7"
tokio-async-await = "0.1.4"
http = "0.1.13"
